--- a/编程规范.md
+++ b/编程规范.md
@@ -2,24 +2,29 @@
 > 宁缺毋滥的使用括号
 
 Yes:
-     if foo:
-         bar()
-     while x:
-         x = bar()
-     if x and y:
-         bar()
-     if not x:
-         bar()
-     return foo
-     for (x, y) in dict.items(): ...
+
+```python
+ if foo:
+     bar()
+ while x:
+     x = bar()
+ if x and y:
+     bar()
+ if not x:
+     bar()
+ return foo
+ for (x, y) in dict.items(): ...
+```
 
 No: 
 
-    if (x):
-        bar()
-    if not(x):
-        bar()
-    return (foo)
+```python
+if (x):
+    bar()
+if not(x):
+    bar()
+return (foo)
+```
 
 ### 命名
 
